# Ratatoskr

./: .dockerignore  ATTRIBUTIONS.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yaml
.github/ISSUE_TEMPLATE/: feature-checklist-template.md  issue-template.md
.github/workflows/: actions.yaml  weather-station.yaml
docs/: index.md
scripts/: README.md  deploy.py  restart.sh  serialize.sh  transfer.sh
src-broker/: Dockerfile  mosquitto.conf
src-diagnostics/: CMakeLists.txt  Dockerfile  Makefile
src-diagnostics/src/: main.cpp  main.test.cpp
src-diagnostics/src/core/: core.cpp  core.hpp
src-diagnostics/src/core/client/: client.cpp  client.hpp
src-diagnostics/src/core/dstar/: dstar.cpp  dstar.hpp  dstar.test.cpp
src-message-broker/: Dockerfile
tests/: README.md
weather_station/: CMakeLists.txt  README.md
weather_station/src/: main.cpp  main.hpp  main.test.cpp
weather_station/src/core/: core.hpp  core.test.cpp
